# icb_value_packs

./: .gitignore  README.md  app.py  local_report_usage_app.py  local_report_usage_extract.py  local_report_usage_master.py  local_report_usage_preprocessing.py  pyproject.toml  requirements.txt  setup.py  sharepoint.py  uv_requirements.txt
images/: Thumbs.db
latest_data/: BOB-ICB-SiteAnalyticsData_3-Mar,2025.xlsx  BOB-ICB-SiteAnalyticsData_6-Jan2025.xlsx  Frimley-ICB-SiteAnalyticsData_2-Dec,2024.xlsx  Frimley-ICB-SiteAnalyticsData_3-Mar,2025.xlsx  Frimley-ICB-SiteAnalyticsData_6-Jan2025.xlsx  HIOW-ICB-SiteAnalyticsData_2-Dec,2024.xlsx  HIOW-ICB-SiteAnalyticsData_3-Mar,2025.xlsx  HIOW-ICB-SiteAnalyticsData_6-Jan2025.xlsx  Somerset-ICB-SiteAnalyticsData_3-Mar,2025.xlsx  Somerset-ICB-SiteAnalyticsData_6-Jan2025.xlsx  Sussex-ICB-SiteAnalyticsData_2-Dec,2024.xlsx  Sussex-ICB-SiteAnalyticsData_3-Mar,2025.xlsx  Sussex-ICB-SiteAnalyticsData_6-Jan2025.xlsx
output/: Thumbs.db
package/: extract_data.py
past_data/: BOB-ICB-SiteAnalyticsData_2-Dec,2024.xlsx  BOB-ICB-SiteAnalyticsData_7-Nov,2024.xlsx  Frimley-ICB-SiteAnalyticsData_7-Nov,2024.xlsx  HIOW-ICB-SiteAnalyticsData_7-Nov,2024.xlsx  Somerset-ICB-SiteAnalyticsData_2-Dec,2024.xlsx  Somerset-ICB-SiteAnalyticsData_7-Nov,2024.xlsx  Sussex-ICB-SiteAnalyticsData_7-Nov,2024.xlsx
working_data/: all_agg_traffic_2025-01-20.csv  all_agg_traffic_2025-02-03.csv  all_agg_traffic_2025-02-04.csv  all_agg_traffic_2025-03-11.csv  all_last90_traffic_2025-01-20.csv  all_last90_traffic_2025-02-04.csv  all_last90_traffic_2025-03-11.csv  all_popular_content_2025-01-20.csv  all_popular_content_2025-02-03.csv  all_popular_content_2025-03-11.csv  all_usage_by_device_2025-03-11.csv  all_usage_by_devide_2025-01-20.csv  all_usage_by_devide_2025-02-03.csv  all_usage_by_time_2025-01-20.csv  all_usage_by_time_2025-02-04.csv  all_usage_by_time_2025-03-11.csv
