[project]
name = "3-local-report-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "asttokens==3.0.0",
    "attrs==24.2.0",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "cachecontrol==0.14.1",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "cleo==2.1.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "crashtest==0.4.1",
    "cycler==0.12.1",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "dulwich==0.21.7",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "fingertips-py==0.4.2",
    "fonttools==4.55.2",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "installer==0.7.0",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "jaraco-classes==3.4.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "keyring==24.3.1",
    "kiwisolver==1.4.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.5.0",
    "msgpack==1.1.0",
    "narwhals==1.16.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.0",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "pip==24.3.1",
    "pip-tools==7.4.1",
    "pipenv==2024.4.0",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "poetry==1.8.5",
    "poetry-core==1.9.1",
    "poetry-plugin-export==1.8.0",
    "prompt-toolkit==3.0.48",
    "protobuf==5.29.1",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==18.1.0",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32==308",
    "pywin32-ctypes==0.2.3",
    "pyzmq==26.2.0",
    "rapidfuzz==3.10.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "seaborn==0.13.2",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.1",
    "stack-data==0.6.3",
    "streamlit==1.40.2",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "trove-classifiers==2024.10.21.16",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "virtualenv==20.28.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
    "zipp==3.21.0",
]
